--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,11 @@ body {
   background-color: rgb(236, 234, 234);
   margin: 0;
 }
+
+img {
+  max-width: 100%;
+}
+
+a {
+  text-decoration: none;
+}
