cards + little mobile

--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -25,6 +25,8 @@
   border: 0.01rem solid tomato;
 }
 
-.register-form input {
+.login-form input {
   outline: none;
+  border-radius: 0.2rem;
+  min-height: 1.3rem;
 }
