--- a/src/components/AddForm/AddForm.module.css
+++ b/src/components/AddForm/AddForm.module.css
@@ -1,5 +1,5 @@
 .form-container {
-  max-width: 30rem;
+  max-width: 20rem;
   margin: 0 auto;
   box-shadow: 0.2rem 0.5em 0.9rem grey;
   border-radius: 0.3rem;
@@ -10,6 +10,10 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
+}
+
+.form-title {
+  text-align: center;
 }
 
 .error-msg {
@@ -25,8 +29,19 @@
   border: 0.01rem solid tomato;
 }
 
-.register-form input {
+.add-form input,
+textarea {
   outline: none;
   border-radius: 0.2rem;
-  min-height: 1.3rem;
+}
+.add-form input {
+  min-height: 1.5rem;
+}
+
+.add-form label {
+  margin-top: 0.5rem;
+}
+
+.add-form textarea {
+  resize: vertical;
 }
