--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -26,3 +26,11 @@
   display: flex;
   flex-direction: row;
 }
+
+@media screen and (min-witdh: 320px) {
+  .nav-link-container {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+  }
+}
