more css + notifications

--- a/src/Pages/HomePage/HomePage.module.css
+++ b/src/Pages/HomePage/HomePage.module.css
@@ -7,7 +7,7 @@
   grid-template-columns: 1fr;
 }
 
-@media screen and (min-witdh: 425px) {
+@media screen and (min-width: 425px) {
   .cards-output {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -17,7 +17,7 @@
 @media screen and (min-width: 768px) {
   .cards-output {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 @media screen and (min-width: 1024px) {
