--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,10 +1,12 @@
 .footer {
+  position: absolute;
+  bottom: 0;
   width: 100%;
-  text-align: center;
-  height: 50px;
-  background-color: transparent;
-  margin-top: auto;
+  height: 4rem;
+}
+
+.footer-text {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
 }
